overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
 
 body {
 	font-size: 15px;
+	overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
